--- a/web bien/consumcat.html
+++ b/web bien/consumcat.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="consum.css" type="text/css">
   <link rel="stylesheet" href="consummov.css" type="text/css">
 
-  <title>Consumo</title>
+  <title>Consum</title>
 </head>
 <body>
   <div id="arriba">
@@ -19,34 +19,33 @@
   </div>
   <div id="medio">
       <div id="textos">
-        <div id="texto">Tiendas</div>
-        <div id="texto1">Consumo</div>
+        <div id="texto">Botigues</div>
+        <div id="texto1">Consum</div>
       </div>
       <div><img src="foto/fondo1.jpg" id="fondo"></div>
       <div id="blog">
         <div id="secciones">
-          <ul class="secc">Tiendas
-            <li class="tiendas"><a href="ropa y accesorios.html" style="color:black">Ropa y accesorios</a></li>
-            <li class="tiendas"><a href="consum.html" style="color:black">Consumo</a></li>
+          <ul class="secc">Botigues
+            <li class="tiendas"><a href="ropa y accesorioscat.html" style="color:black">Robes i accesoris</a></li>
+            <li class="tiendas"><a href="consumcat.html" style="color:black">Consum</a></li>
           </ul>
-          <div class="secc"><a href="restaurantes.html" style="color:black">Restaurantes</a></div>
-          <div class="secc"><a href="restaurantes.html" style="color:black">Rutas</div>
-          <div class="secc"><a href="nosotros.html" style="color:black">Nosotros</a></div>
+          <div class="secc"><a href="restaurantescat.html" style="color:black">Restaurants</a></div>
+          <div class="secc"><a href="mapacat.html" style="color:black">Rutes</a></div>
+          <div class="secc"><a href="nosotroscat.html" style="color:black">Nosaltres</a></div>
         </div>
-
 
         <ul id="menu">
      <li><input type="checkbox" name="list" id="nivel1-1"><label for="nivel1-1"><h1>=</h1></label>
      <ul class="interior">
-         <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Tienda</label>
+         <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Botigues</label>
            <ul class="interior">
-             <li><a href="ropa y accesorios.html">Ropa y accesorios</a></li>
-             <li><a href="consum.html">Consumo</a></li>
+             <li><a href="ropa y accesorioscat.html">Robes i accesoris</a></li>
+             <li><a href="consumcat.html">Consum</a></li>
             </ul>
          </li>
-         <li><a href="restaurantes.html">Restaurante</a></li>
-         <li><a href="mapa.html">Rutas</a></li>
-         <li><a href="nosotros.html">Nosotros</a></li>
+         <li><a href="restaurantescat.html">Restaurants</a></li>
+         <li><a href="mapacat.html">Rutes</a></li>
+         <li><a href="nosotroscat.html">Nosaltres</a></li>
          <li><a href="rutasbarnajap.html">Home</a></li>
     </ul>
   </ul>
@@ -56,39 +55,44 @@
         <div id="madame"><h2>Yang Kuang Supermercats</h2>
           <div> <img src="foto/yang1.jpg"  class="grande"></div>
           <div> <img src="foto/yang2.jpg"  class="grande"></div>
-          <p id="text1">Yang Kuang es una tienda de alimentación Oriental que se encuentra en pleno Arco de Triunfo en Barcelona, en ella puedes encontrar todo tipo de alimentos, entre ellos se encuentran: Carne, dulces, bebidas de distintos sabores, tofu fresco, además esta tienda dispone de dos apartados, en una podrás encontrar los productos más frescos y en la otra parte podrás encontrar comida ya preparada. Un añadido también es que es perfecta para la gente vegana y vegetariana.</p>
+          <p id="text1">Yang Kuang és una botiga d'alimentació Oriental que es troba en ple Arc de Triomf a Barcelona, ​​en ella pots trobar tota mena d'aliments, entre ells es troben: Carn, dolços, begudes de diferents sabors, tofu fresc, a més aquesta botiga disposa de dos apartats, en una podràs trobar els productes més frescos i en l'altra part podràs trobar menjar ja preparat. Un afegit també és que és perfecta per a la gent vegana i vegetariana.</p>
           <div> <img src="foto/yang3.jpg"  class="pequeña"></div>
           <div> <img src="foto/yang4.jpg"  class="pequeña"></div>
           <div> <img src="foto/yang5.jpg"  class="pequeña"></div>
-          <p id="text1">Nuestra opinión sobre este supermercado es que los productos son económicos de precio, es una tienda amplia y muy bien iluminada, disponen de muchos productos orientales y de gran calidad, la recomendamos sin duda por sus grandes productos.</p>
+          <p id="text1">La nostra opinió sobre aquest supermercat és que els productes són econòmics de preu, és una botiga àmplia i molt ben il·luminada, disposen de molts productes orientals i de gran qualitat, la recomanem sens dubte pels seus grans productes.</p>
           <p id="text3">Teléfono: 932 46 29 00</p>
         </div>
 
         <div id="nunoya"><h2>Tokyo-Ya</h2>
           <div> <img src="foto/tokio1.jpg"  class="grande"></div>
           <div> <img src="foto/tokio2.jpg"  class="grande"></div>
-        <p id="text1">Tokyo-Ya se encuentra en Barcelona concretamente en zona de l'Eixample, es una tienda de alimentación Japonesa, son unos de las primeras empresas en acercar la gastronomía japonesa a España. Puedes encontrar productos ya procesados frescos, incluso en ella puedes encontrar un expositor de artículos para goumerts.</p>
+        <p id="text1">
+Tokyo-Ja es troba a Barcelona concretament en zona de l'Eixample, és una botiga d'alimentació Japonesa, són unes de les primeres empreses a acostar la gastronomia japonesa a Espanya. Pots trobar productes ja processats frescos, fins i tot en ella pots trobar un expositor d'articles per goumerts.
+</p>
           <div> <img src="foto/tokio3.jpg"  class="pequeña"></div>
           <div> <img src="foto/tokio5.jpg"  class="pequeña"></div>
           <div> <img src="foto/tokio4.jpg"  class="pequeña"></div>
-            <p id="text1">Los precios de este supermercado son un poco elevados, ya que son de importación, viene desde Japón, pero estos vienen de buena calidad. La atención al público es estupenda, estos te reciben con muy buena educación al entrar y al salir.</p>
+            <p id="text1">Els preus d'aquest supermercat són una mica elevats, ja que són d'importació que ve des del Japó, aquests vénen de bona qualitat. L'atenció al públic és estupenda, aquests et reben amb molt bona educació en entrar i en sortir.</p>
             <p id="text3">Teléfono: 935 32 19 38</p>
 
         </div>
           <div id="otonashi"><h2>Takashi Ochiai</h2>
             <div> <img src="foto/takashi1.jpg"  class="grande"></div>
             <div> <img src="foto/takashi2.jpg"  class="grande"></div>
-             <p id="text1">Takashi Ochiai es una pastelería y cafetería Japonesa minimalista, en ella puedes encontrar desde dulces japoneses hasta sus bebidas más peculiares. Esta pastelería dispone con unos cursos de cocina Japonesa donde te enseñan a hacer postres, pero sus plazas son algo limitadas.El precio de sus productos son muy elevados pero merece la pena pagar por ello ya que la comida esta muy bien.</p>
+             <p id="text1">Els preus d'aquest supermercat són una mica elevats, ja que són d'importació que ve des del Japó, aquests vénen de bona qualitat. L'atenció al públic és estupenda, aquests et reben amb molt bona educació en entrar i en sortir.</p>
             <div> <img src="foto/takashi3.jpg"  class="pequeña"></div>
             <div> <img src="foto/takashi4.jpg"  class="pequeña"></div>
             <div> <img src="foto/takashi5.jpg"  class="pequeña"></div>
-            <p id="text1"> Al ser una de las pocas pastelerías Japonesas en Barcelona, los productos son elevados pero a la vez de una gran calidad que no podrías encontrar en tiendas ya de comida procesada, Takashi Ochiai es grande que dispone con dos grandes apartados.</p>
+            <p id="text1"> En ser una de les poques pastisseries Japoneses a Barcelona, ​​els productes són elevats però alhora d'una gran qualitat que no podries trobar en botigues ja de menjar processat, Takashi Ochiai és gran que disposa amb dos grans apartats.
+
+</p>
             <p id="text3">Teléfono: 934 53 63 83</p>
           </div>
           <div id="haiku"><h2>Starting From Snack</h2>
             <div> <img src="foto/snack2.jpg"  class="grande"></div>
             <div> <img src="foto/snack1.jpg"  class="grande"></div>
-            <p id="text1">Esta tienda es relativamente nueva, apenas tiene productos en su interior, pero si que son de buena calidad, y bastante económicos, próximamente sabremos más sobre sus productos.</p>
+            <p id="text1">Aquesta botiga és relativament nova,  té productes en el seu interior, però sí que són de bona qualitat, i força econòmics, pròximament sabrem més sobre els seus productes.
+</p>
             <div> <img src="foto/tienda3.jpg"  class="pequeña"></div>
             <div> <img src="foto/tienda4.jpg"  class="pequeña"></div>
             <div> <img src="foto/tienda5.jpg"  class="pequeña"></div>
