--- a/web bien/mapacat.html
+++ b/web bien/mapacat.html
@@ -26,29 +26,28 @@
       <div><img src="foto/mapa.jpg" id="fondo"></div>
       <div id="blog">
         <div id="secciones">
-          <ul class="secc">Tiendas
-            <li class="tiendas"><a href="ropa y accesorios.html" style="color:black">Ropa y accesorios</a></li>
-            <li class="tiendas"><a href="consum.html" style="color:black">Consumo</a></li>
+          <ul class="secc">Botigues
+            <li class="tiendas"><a href="ropa y accesorioscat.html" style="color:black">Robes i accesoris</a></li>
+            <li class="tiendas"><a href="consumcat.html" style="color:black">Consum</a></li>
           </ul>
-          <div class="secc"><a href="restaurantes.html" style="color:black">Restaurantes</a></div>
-          <div class="secc"><a href="mapa.html" style="color:black">Rutas</a></div>
-          <div class="secc"><a href="nosotros.html" style="color:black">Nosotros</a></div>
+          <div class="secc"><a href="restaurantescat.html" style="color:black">Restaurants</a></div>
+          <div class="secc"><a href="mapacat.html" style="color:black">Rutes</a></div>
+          <div class="secc"><a href="nosotroscat.html" style="color:black">Nosaltres</a></div>
         </div>
 
         <ul id="menu">
      <li><input type="checkbox" name="list" id="nivel1-1"><label for="nivel1-1"><h1>=</h1></label>
      <ul class="interior">
-         <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Tiendas</label>
+         <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Botigues</label>
            <ul class="interior">
-             <li><a href="ropa y accesorios.html">Ropa y accesorios</a></li>
-             <li><a href="consum.html">Consumo</a></li>
+             <li><a href="ropa y accesorioscat.html">Robes i accesoris</a></li>
+             <li><a href="consumcat.html">Consum</a></li>
             </ul>
          </li>
-         <li><a href="restaurantes.html">Restaurantes</a></li>
-         <li><a href="#r">Rutas</a></li>
-         <li><a href="nosotros.html">Nosotros</a></li>
+         <li><a href="restaurantescat.html">Restaurants</a></li>
+         <li><a href="mapacat.html">Rutes</a></li>
+         <li><a href="nosotroscat.html">Nosaltres</a></li>
          <li><a href="rutasbarnajap.html">Home</a></li>
-
     </ul>
   </ul>
   <iframe src="https://www.google.com/maps/d/embed?mid=1eFMBfE6V1zX8zVmKmAqHgJTEP5SySpNW"  id="mapa"></iframe>
