--- a/web bien/nosotroscat.html
+++ b/web bien/nosotroscat.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="nosotrosmov.css" type="text/css">
   <link rel="stylesheet" href="nosotros.css" type="text/css">
 
-  <title>Sobre nosotros</title>
+  <title>Sobre nosaltres</title>
 </head>
 <body>
   <div id="arriba">
@@ -19,44 +19,44 @@
   </div>
   <div id="medio">
       <div id="textos">
-        <div id="texto"> BARCELONA, TIENDAS Y RESTAURANTES </div>
-        <div id="texto1"> Desde 2019, somos las mejores rutas japonesa de Barcelona </div>
+        <div id="texto">Barcelona, botigues i restaurants</div>
+        <div id="texto1">Desde 2019, som les millors rutes japoneses de Barcelona</div>
       </div>
       <div><img src="foto/fondos.jpg" id="fondo"></div>
       <div id="blog">
         <div id="secciones">
-          <ul class="secc">Tiendas
-            <li class="tiendas"><a href="ropa y accesorios.html" style="color:black">Ropa y accesorios</a></li>
-            <li class="tiendas"><a href="consum.html" style="color:black">Consumo</a></li>
+          <ul class="secc">Botigues
+            <li class="tiendas"><a href="ropa y accesorioscat.html" style="color:black">Robes i accesoris</a></li>
+            <li class="tiendas"><a href="consumcat.html" style="color:black">Consum</a></li>
           </ul>
-          <div class="secc"><a href="restaurantes.html" style="color:black">Restaurantes</a></div>
-          <div class="secc"><a href="mapa.html" style="color:black">Rutas</a></div>
-          <div class="secc"><a href="nosotros.html" style="color:black">Nosotros</a></div>
+          <div class="secc"><a href="restaurantescat.html" style="color:black">Restaurants</a></div>
+          <div class="secc"><a href="mapacat.html" style="color:black">Rutes</a></div>
+          <div class="secc"><a href="nosotroscat.html" style="color:black">Nosaltres</a></div>
         </div>
-
 
         <ul id="menu">
      <li><input type="checkbox" name="list" id="nivel1-1"><label for="nivel1-1"><h1>=</h1></label>
      <ul class="interior">
-         <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Tienda</label>
+         <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Botigues</label>
            <ul class="interior">
-             <li><a href="ropa y accesorios.html" style="color:black">Ropa y accesorios</a></li>
-             <li><a href="consum.html" style="color:black">Consumo</a></li>
+             <li><a href="ropa y accesorioscat.html">Robes i accesoris</a></li>
+             <li><a href="consumcat.html">Consum</a></li>
             </ul>
          </li>
-         <li><a href="restaurantes.html" >Restaurante</a></li>
-         <li><a href="mapa.html">Rutas</a></li>
-         <li><a href="nosotros.html">Nosotros</a></li>
+         <li><a href="restaurantescat.html">Restaurants</a></li>
+         <li><a href="mapacat.html">Rutes</a></li>
+         <li><a href="nosotroscat.html">Nosaltres</a></li>
          <li><a href="rutasbarnajap.html">Home</a></li>
     </ul>
   </ul>
         <div id="nosotros">
-        <h1> Sobre nosotros</h1>
-        <p>Somos una empresa dedicada a la gente interesada por la cultura
-        japonesa, recomendamos las mejores tiendas de estilo japonés de Barcelona para que las puedas visitar.</p>
+        <h1> Sobre nosaltres</h1>
+        <p>
+          Som una empresa dedicada a la gent que li agrada la cultura japonesa, recomanem les millors botigues d'estil japonès de Barcelona perquè les puguis visitar.
+        </p>
 
-        <p>Comida, ropa, decoración, restaurantes y muchas cosas más que te recomendamos en nuestra ruta por Barcelona.</p>
-        <p> BarnaJap surgió de la idea de dos alumnos de artes graficas del Esteve Terrades.</p>
+        <p>Menjar, roba, decoració, restaurants i moltes coses mes que et recomanem en la nostra ruta per Barcelona.</p>
+        <p> BarnaJap va sorgir de la idea de dos alumnes d'arts gràfiques de l'Esteve Terrades.</p>
        </div>
       </div>
 
