--- a/web bien/restaurantescat.html
+++ b/web bien/restaurantescat.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="restaurantes.css" type="text/css">
   <link rel="stylesheet" href="restaurantemov.css" type="text/css">
-  <title>Restaurantes</title>
+  <title>Restaurants</title>
 </head>
 <body>
   <div id="arriba">
@@ -18,33 +18,33 @@
   </div>
   <div id="medio">
       <div id="textos">
-        <div id="texto">Restaurantes</div>
-        <div id="texto1">Restaurantes Japoneses tradicionales</div>
+        <div id="texto">Restaurants</div>
+        <div id="texto1">Restaurants tradicionals japonesos</div>
       </div>
       <div><img src="foto/restaurante.jpg" id="fondo"></div>
       <div id="blog">
         <div id="secciones">
-          <ul class="secc">Tiendas
-            <li class="tiendas"><a href="ropa y accesorios.html" style="color:black">Ropa y accesorios</a></li>
-            <li class="tiendas"><a href="consum.html" style="color:black">Consumo</a></li>
+          <ul class="secc">Botigues
+            <li class="tiendas"><a href="ropa y accesorioscat.html" style="color:black">Robes i accesoris</a></li>
+            <li class="tiendas"><a href="consumcat.html" style="color:black">Consum</a></li>
           </ul>
-          <div class="secc"><a href="restaurantes.html" style="color:black">Restaurantes</a></div>
-          <div class="secc"><a href="mapa.html" style="color:black">Rutas</a></div>
-          <div class="secc"><a href="nosotros.html" style="color:black">Nosotros</a></div>
+          <div class="secc"><a href="restaurantescat.html" style="color:black">Restaurants</a></div>
+          <div class="secc"><a href="mapacat.html" style="color:black">Rutes</a></div>
+          <div class="secc"><a href="nosotroscat.html" style="color:black">Nosaltres</a></div>
         </div>
 
         <ul id="menu">
      <li><input type="checkbox" name="list" id="nivel1-1"><label for="nivel1-1"><h1>=</h1></label>
      <ul class="interior">
-         <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Tiendas</label>
+         <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Botigues</label>
            <ul class="interior">
-             <li><a href="ropa y accesorios.html">Ropa y accesorios</a></li>
-             <li><a href="consum.html">Consumo</a></li>
+             <li><a href="ropa y accesorioscat.html">Robes i accesoris</a></li>
+             <li><a href="consumcat.html">Consum</a></li>
             </ul>
          </li>
-         <li><a href="restaurantes.html">Restaurantes</a></li>
-         <li><a href="mapa.html">Rutas</a></li>
-         <li><a href="nosotros.html">Nosotros</a></li>
+         <li><a href="restaurantescat.html">Restaurants</a></li>
+         <li><a href="mapacat.html">Rutes</a></li>
+         <li><a href="nosotroscat.html">Nosaltres</a></li>
          <li><a href="rutasbarnajap.html">Home</a></li>
     </ul>
   </ul>
@@ -53,7 +53,8 @@
         <h1> Restaurantes</h1>
                 <div id="madame"><h2>Ramen-ya Ajisen</h2>
                   <div> <img src="foto/ajisen.jpg"  class="grande"></div>
-                  <p class="text">Ramen-Ya Ajisen es un restaurante Japonés, pequeño pero muy decorado que tiene un ambiente anime, en este restaurantey sirven unos platos típicos Japoneses de muy buena calidad y a un precio de lo más económico, su atención al píblico es lo más agradable.</p>
+                  <p class="text">Ramen-Ya Ajisen es un restaurante Japonés, pequeño pero muy decorado quRamen-Ja Ajisen és un restaurant Japonès, petit però molt bé decorat que té un ambient anime, en aquest restaurant serveixen uns plats típics Japonesos de molt bona qualitat a un preu d'allò més econòmic, la seva atenció al públic és el més agradable.
+</p>
 
                   <p class="text3">Teléfono: 933 30 26 04</p>
                 </div>
@@ -61,7 +62,8 @@
 
                 <div id="nunoya"><h2>Fukuya</h2>
                   <div> <img src="foto/fukuya.jpg"  class="grande"></div>
-                <p class="text">Fukuya, ofrece un sushi de muy alta calidad además de otros platos caseros de la gastronomia Japonesa, este tiene una decoración básica pero acogedora. Aquí puedes encontrar desde cocina nipona antigua hasta la más moderna. Es bastante grande y acogedora y la atención al píblico es amable.</p>
+                <p class="text">Fukuya, ofereix un sushi de molt alta qualitat a més d'altres plats casolans de la gastronomia Japonesa, aquest té una decoració bàsica però acollidora. Aquí pots trobar des de cuina nipona antiga fins a la més moderna. És bastant gran i acollidora i l'atenció al públic és amable.
+</p>
 
                 <p class="text3">Teléfono: 935 18 65 04</p>
                 </div>
@@ -78,40 +80,48 @@
 
           <div id="otonashi"><h2>Jardin de Bambu</h2>
             <div> <img src="foto/jardin.jpg"  class="grande"></div>
-            <p class="text">Jardín del Bambú, es un buffet libre con bastante variedad de platos Japoneses, tiene un ambiente moderno y acogedor con una gran iluminación y la calidad-precio es adecuada, su servicio es agradable y eficiente.</p>
+            <p class="text">
+Jardí del Bambú, és un bufet lliure amb bastant varietat de plats Japonesos, té un ambient modern i acollidor amb una gran il·luminació i la qualitat-preu és adequada, el seu servei és agradable i eficient.
+</p>
 
             <p class="text3">Teléfono: 935 39 88 82</p>
           </div>
 
           <div id="otonashi"><h2>Mikawa</h2>
             <div> <img src="foto/mikawa.jpg"  class="grande"></div>
-            <p class="text">Mikawa es un resataurante de comida japonesa, la carta es variada en ella puedes encontrar makis, sopas, sushi... Este restaurante cuenta con un buffer libre y un menú a la carta, es amplio y de buena iluminación su servicio es rápido y los camareros son amables. El precio es económico y su comida es exquisita.</p>
+            <p class="text">
+              Mikawa és un restaurant de menjar Japonès, la carta és molt variada trobaràs makis, sopes, sushi ... Aquest restaurant compta amb un buffer lliure i un menú a la carta, és ampli i de bona il·luminació seu servei és ràpid i els cambrers són amables. El preu és econòmic i el seu menjar és exquisit.
+
+</p>
 
             <p class="text3">Teléfono: 930 23 19 04</p>
           </div>
 
           <div id="haiku"><h2>Nihon Sakari</h2>
             <div> <img src="foto/nihon.jpg"  class="grande"></div>
-            <p class="text">Nihon Sakari, es uno de los mejores restaurantes Japoneses también es acogedor que dispone con decoración nipona, con gran calidad en sus productos, dispone con opciones para vegeritatienos y la atención al público es correcta y su calidad-precio es estupenda. </p>
+            <p class="text">Nihon sakari, és un dels millors restaurants Japonesos, també és acollidor que disposa amb decoració nipona, amb gran qualitat en els seus productes, disposa amb opcions per a vegetarians i l'atenció al públic és correcta i la seva qualitat-preu és estupenda.
+ </p>
 
             <p class="text3">Teléfono: 932 65 04 60</p>
           </div>
 
           <div id="norma"><h2>Nomo Gracia</h2>
             <div> <img src="foto/nomo.jpg"  class="grande"></div>
-            <p class="text">En Nomo Graca, encontrarás comida Japonesa donde aquí la comida es una maravilla, su ambiente es moderno y acogedor con elementos de madera y acero oxidado, dispone de un salón amplio y una terraza exterior. Este restaurante tiene opciones vegetarianas, veganas y opciones sin gluten.La comida es bien presentada. El servicio es execelente y el local es amplio con opción de reserva aunque algo lento en servir.</p>
+            <p class="text">En Nomo Gracia, trobaràs menjar Japonès on aquí el menjar és una meravella, el seu ambient és modern i acollidor amb elements de fusta i acer oxidat, disposa d'un saló ampli i una terrassa exterior. Aquest restaurant té opcions vegetarianes, veganes i opcions sense gluten. El menjar és ben presentat. El servei és excel·lent i el local és ampli amb opció de reserva encara que una mica lent en servir.</p>
             <p class="text3">Teléfono: 934 15 96 22</p>
           </div>
           <div id="haiku"><h2>Ramen BCN</h2>
             <div> <img src="foto/ramen.jpg"  class="grande"></div>
-            <p class="text">En este restaurente la comida esta buenisima, el trato al cliente es estupendo siendo amable y atento, el local es grande y limpio y buena decoracion basica pero llamatiba a la vez, es muy recomendable visitar este lugar.</p>
+            <p class="text">En aquest restaurant el menjar és boníssim, el tracte al client és fantàstic sent amable i atent, el local és gran i net i bona decoració bàsica però agradable alhora, és molt recomanable visitar aquest lloc.
+</p>
             <p class="text3">Teléfono: 931 06 58 74</p>
           </div>
 
 
           <div id="haiku"><h2>Yatai</h2>
             <div> <img src="foto/yatai.jpg"  class="grande"></div>
-            <p class="text">Si no has estado nunca en Japón, tienes que visitar este lugar, ya que la decoracion de este sitio esta repleto de detalles curiosos. Recomendale reservar ya que se suele llenar mucho. La comida es barata pero no es de muy buena calidad, asi que si quieres gastarte poco dinero y comer mucho este es tu sitio.</p>
+            <p class="text">Si no has estat mai al Japó, has de visitar aquest lloc, ja que la decoració d'aquest lloc està replet de detalls curiosos. Et recomanem reservar, ja que se sol omplir molt. El menjar és de bon preu però no és de molt bona qualitat, així que si vols gastar-te pocs diners i menjar molt aquest és el teu lloc.
+</p>
             <p class="text3">Teléfono: 935 32 64 56</p>
           </div>
 
@@ -119,7 +129,7 @@
 
           <div id="haiku"><h2>Kawamura</h2>
             <div> <img src="foto/okono.jpg"  class="grande"></div>
-            <p class="text">Kawamura es un restaurante cálido y bien ambientado con la cultura Japonesa. El servicio es muy atento y profesional, el precio es razonable ya que la comida es de muy buena calidad. </p>
+            <p class="text">Kawamura és un restaurant càlid i ben ambientat amb la cultura japonesa. El servei és molt atent i professional, el preu és raonable, ja que el menjar és de molt bona qualitat. </p>
 
             <p class="text3">Teléfono: 930 23 75 46</p>
           </div>
@@ -127,7 +137,7 @@
 
           <div id="haiku"><h2>Wok Yutaka</h2>
             <div> <img src="foto/yutaka1.jpg"  class="grande"></div>
-            <p class="text">Yutaka es un restaurante buffet libre, donde puedes encontrar comida japonesa. Es un sitio donde el precio esta bien, el local es algo ruidoso pero es bastante amplio. </p>
+            <p class="text">Yutaka és un restaurant bufet lliure, on pots trobar menjar Japonès. És un lloc on el preu està bé, el local és una mica sorollós però és força ampli. </p>
 
             <p class="text3">Teléfono: 934 58 04 94</p>
           </div>
