--- a/web bien/ropa y accesorios.html
+++ b/web bien/ropa y accesorios.html
@@ -15,7 +15,7 @@
       <div><a href="rutasbarnajap.html" style="color:black"><img src="foto/logo.png" id="logo"></a></div>
       <div id="idioma">
         <div class="ca"><a href="nosotros.html" style="color:black">Castellano</a></div>
-        <div class="ca">Catalan</div>
+        <div class="ca"><a href="nosotroscat.html" style="color:black">Català</a></div>
       </div>
   </div>
   <div id="medio">
@@ -31,7 +31,7 @@
             <li class="tiendas"><a href="consum.html" style="color:black">Consumo</a></li>
           </ul>
           <div class="secc"><a href="restaurantes.html" style="color:black">Restaurantes</a></div>
-          <div class="secc"><a href="mapa.html">Rutas</a></div>
+          <div class="secc"><a href="mapa.html" style="color:black">Rutas</a></div>
           <div class="secc"><a href="nosotros.html" style="color:black">Nosotros</a></div>
         </div>
 
@@ -57,12 +57,12 @@
         <div id="madame"><h2>Madame Chocolat</h2>
           <div> <img src="foto/madame4.jpg"  class="grande"></div>
           <div> <img src="foto/madame5.jpg"  class="grande"></div>
-          <p id="text1">Madame Chocolat es una tienda de ropa y accesorios de cosas alternativas Japonesas en ella puedes encontrar desde ropa lolita, gótica, steampunk y otras tendencias alternativas con un extenso catalogo de accesorios y decoración nipona.</p>
+          <p id="text1">Madame Chocolat es una tienda de ropa y accesorios de cosas alternativas Japonesas, en ella puedes encontrar desde ropa lolita, gótica, steampunk y otras tendencias alternativas con un extenso catalogo de accesorios y decoración nipona.</p>
           <div> <img src="foto/madame1.jpg"  class="pequeña"></div>
           <div> <img src="foto/madame2.jpg"  class="pequeña"></div>
           <div> <img src="foto/madame3.jpg"  class="pequeña"></div>
           <p id="text1">Nuestra opinión sobre Madame Chocolat es que aun así que la tienda sea bastante pequeña, en ella puedes encontrar un extenso catálogo de variedad sobre cosas de Japón, sobretodo en ropa y accesorios de diferentes marcas Japonesas, la calidad de sus productos es bastante buena.</p>
-          <p id="text3">Telefono: 932 44 84 23</p>
+          <p id="text3">Teléfono: 932 44 84 23</p>
         </div>
 
         <div id="nunoya"><h2>Nunoya</h2>
@@ -74,7 +74,7 @@
           <div> <img src="foto/nunoya3.jpg"  class="pequeña"></div>
             <p id="text1">Pensamos que Nunoya es una tienda bien iluminada y de tamaño mediano, sus telas estampadas son de gran calidad y de algodón 100%.
             Esta tienda tiene un trato estupendo con la gente, sin duda la recomendamos si necesitas telas de cualquier tipo.</p>
-            <p id="text3">Telofono: 933 17 53 88</p>
+            <p id="text3">Teléfono: 933 17 53 88</p>
         </div>
           <div id="norma"><h2>Norma comics</h2>
             <div> <img src="foto/norma3.jpg"  class="grande"></div>
@@ -84,17 +84,17 @@
             <div> <img src="foto/norma4.jpg"  class="pequeña"></div>
             <div> <img src="foto/norma5.jpg"  class="pequeña"></div>
             <p id="text1">Norma Cómics desde nuestro punto de vista es una tienda bastante amplia, que cuenta con dos plantas, en una de ellas puedes encontrar cómics y figuras, en la segunda planta puedes encontrar cosas más ambientadas sobre la cultura Japonesa.</p>
-            <p id="text3">Telofono: 932 44 84 23</p>
+            <p id="text3">Teléfono: 932 44 84 23</p>
           </div>
           <div id="otonashi"><h2>Otomashi</h2>
             <div> <img src="foto/otonashi2.jpg"  class="grande"></div>
             <div> <img src="foto/otonashi1.jpg"  class="grande"></div>
-            <p id="text1">Otomashi es una pequeña tienda de merchandising y accesorios, el trato al publico es espontaneo ya que depende de la persona a cargo te tratan de una forma u otra. Tienen un precio económico si comparamos con el resto de tiendas similares que hay en esta zona.</p>
+            <p id="text1">Otomashi es una pequeña tienda de merchandising y accesorios, el trato al público es espontaneo ya que depende de la persona a cargo te tratan de una forma u otra. Tienen un precio económico si comparamos con el resto de tiendas similares que hay en esta zona.</p>
             <div> <img src="foto/otonashi3.jpg"  class="pequeña"></div>
             <div> <img src="foto/otonashi4.jpg"  class="pequeña"></div>
             <div> <img src="foto/otonashi5.jpg"  class="pequeña"></div>
             <p id="text1">A pesar de que Otamashi sea una tienda pequeña, cuenta con una gran variedad de productos Japoneses, la mayoría de los productos son falsos pero de buena calidad y bastantes baratos.</p>
-            <p id="text3">Telofono: 930 07 64 10</p>
+            <p id="text3">Teléfono: 930 07 64 10</p>
           </div>
           <div id="haiku"><h2>Haiku</h2>
             <div> <img src="foto/haiku1.jpg"  class="grande"></div>
@@ -103,8 +103,8 @@
             <div> <img src="foto/haiku3.jpg"  class="pequeña"></div>
             <div> <img src="foto/haiku4.jpg"  class="pequeña"></div>
             <div> <img src="foto/haiku5.jpg"  class="pequeña"></div>
-            <p id="text1">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al publico cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda para la gente que quiera sentirse en japon. Los precios son competitivos, pero merece la pena por la buena calidad que tienen. </p>
-            <p id="text3">Telofono: 932 17 96 23</p>
+            <p id="text1">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al público cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda para la gente que quiera sentirse en japon. Los precios son competitivos, pero merece la pena por la buena calidad que tienen. </p>
+            <p id="text3">Teléfono: 932 17 96 23</p>
           </div>
           <div id="haiku"><h2>Momo store</h2>
             <div> <img src="foto/momo1.jpg"  class="grande"></div>
@@ -114,7 +114,7 @@
             <div> <img src="foto/momo4.jpg"  class="pequeña"></div>
             <div> <img src="foto/momo5.jpg"  class="pequeña"></div>
             <p id="text1">Nuestra opinión sobre Momo es que el trato con el público es agradable y encantador, tiene buenos precios y sus productos son de gran calidad, además de que si no encuentras algo sobre el producto que deseas comprar lo puedes reservar. </p>
-            <p id="text3">Telofono: 932 17 96 23</p>
+            <p id="text3">Teléfono: 932 17 96 23</p>
           </div>
           <div id="haiku"><h2>Eikyo</h2>
             <div> <img src="foto/eikyo1.jpg"  class="grande"></div>
@@ -124,7 +124,7 @@
             <div> <img src="foto/eikyo4.jpg"  class="pequeña"></div>
             <div> <img src="foto/eikyo5.jpg"  class="pequeña"></div>
             <p id="text1">Eikyo, es una tienda pequeña y acogedora, sus dueños son de lo más simpaticos y el trato con la gente es educado y encantador, se nota que tienen una gran pasión sobre la cultura Japonesa y siempre te van a recomendar los mejores productos sobre Japón. </p>
-            <p id="text3">Telofono: 932 17 96 23</p>
+            <p id="text3">Teléfono: 932 17 96 23</p>
           </div>
       </div>
   </div>
