--- a/web bien/rutasbarnajapcat.html
+++ b/web bien/rutasbarnajapcat.html
@@ -14,7 +14,7 @@
   <img src="foto/inicio.jpg" id="fondo">
   <img src="foto/fondoprincipal.jpg" id="fondo2">
   <div id="idioma">
-    <div id="catala"><a href="nosotroscat.html" style="color:black">CATALÀ</a></div>
+    <div id="catala">CATALÀ</div>
     <div id="castellano"><a href="nosotros.html" style="color:black">CASTELLANO</a></div>
 
   </div>
