--- a/web bien/ropayaccesorios.html
+++ b/web bien/ropayaccesorios.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="stylesheet" href="ropa y accesoriosmov.css" type="text/css">
-  <link rel="stylesheet" href="ropa y accesorios.css" type="text/css">
+<link rel="stylesheet" href="ropayaccesorios_mov.css" type="text/css">
+  <link rel="stylesheet" href="ropayaccesorios.css" type="text/css">
 
 
   <title>Ropa y accesorios</title>
 </head>
 <body>
   <div id="arriba">
-      <div><a href="rutasbarnajap.html" style="color:black"><img src="foto/logo.png" id="logo"></a></div>
+      <div><a href="index.html" style="color:black"><img src="foto/logo.png" id="logo"></a></div>
       <div id="idioma">
         <div class="ca"><a href="nosotros.html" style="color:black">Castellano</a></div>
-        <div class="ca"><a href="nosotroscat.html" style="color:black">Català</a></div>
+        <div class="ca"><a href="nosotros_cat.html" style="color:black">Català</a></div>
       </div>
   </div>
   <div id="medio">
@@ -27,7 +27,7 @@
       <div id="blog">
         <div id="secciones">
           <ul class="secc">Tiendas
-            <li class="tiendas"><a href="ropa y accesorios.html" style="color:black">Ropa y accesorios</a></li>
+            <li class="tiendas"><a href="ropayaccesorios.html" style="color:black">Ropa y accesorios</a></li>
             <li class="tiendas"><a href="consum.html" style="color:black">Consumo</a></li>
           </ul>
           <div class="secc"><a href="restaurantes.html" style="color:black">Restaurantes</a></div>
@@ -40,14 +40,14 @@
      <ul class="interior">
          <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Tienda</label>
            <ul class="interior">
-             <li><a href="ropa y accesorios.html">Ropa y accesorios</a></li>
+             <li><a href="ropayaccesorios.html">Ropa y accesorios</a></li>
              <li><a href="consum.html">Consumo</a></li>
             </ul>
          </li>
          <li><a href="restaurantes.html">Restaurante</a></li>
          <li><a href="mapa.html">Rutas</a></li>
          <li><a href="nosotros.html">Nosotros</a></li>
-         <li><a href="rutasbarnajap.html">Home</a></li>
+         <li><a href="index.html">Home</a></li>
     </ul>
   </ul>
 
