--- a/web bien/consum_cat.html
+++ b/web bien/consum_cat.html
@@ -5,16 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="consum.css" type="text/css">
-  <link rel="stylesheet" href="consummov.css" type="text/css">
+  <link rel="stylesheet" href="consum_mov.css" type="text/css">
 
   <title>Consum</title>
 </head>
 <body>
   <div id="arriba">
-      <div><a href="rutasbarnajap.html" style="color:black"><img src="foto/logo.png" id="logo"></a></div>
+      <div><a href="index.html" style="color:black"><img src="foto/logo.png" id="logo"></a></div>
       <div id="idioma">
         <div class="ca"><a href="nosotros.html" style="color:black">Castellano</a></div>
-        <div class="ca"><a href="nosotroscat.html" style="color:black">Català</a></div>
+        <div class="ca"><a href="nosotros_cat.html" style="color:black">Català</a></div>
       </div>
   </div>
   <div id="medio">
@@ -26,12 +26,12 @@
       <div id="blog">
         <div id="secciones">
           <ul class="secc">Botigues
-            <li class="tiendas"><a href="ropa y accesorioscat.html" style="color:black">Robes i accesoris</a></li>
-            <li class="tiendas"><a href="consumcat.html" style="color:black">Consum</a></li>
+            <li class="tiendas"><a href="ropayaccesorios_cat.html" style="color:black">Robes i accesoris</a></li>
+            <li class="tiendas"><a href="consum_cat.html" style="color:black">Consum</a></li>
           </ul>
-          <div class="secc"><a href="restaurantescat.html" style="color:black">Restaurants</a></div>
-          <div class="secc"><a href="mapacat.html" style="color:black">Rutes</a></div>
-          <div class="secc"><a href="nosotroscat.html" style="color:black">Nosaltres</a></div>
+          <div class="secc"><a href="restaurantes_cat.html" style="color:black">Restaurants</a></div>
+          <div class="secc"><a href="mapa_cat.html" style="color:black">Rutes</a></div>
+          <div class="secc"><a href="nosotros_cat.html" style="color:black">Nosaltres</a></div>
         </div>
 
         <ul id="menu">
@@ -39,14 +39,14 @@
      <ul class="interior">
          <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Botigues</label>
            <ul class="interior">
-             <li><a href="ropa y accesorioscat.html">Robes i accesoris</a></li>
-             <li><a href="consumcat.html">Consum</a></li>
+             <li><a href="ropayaccesorios_cat.html">Robes i accesoris</a></li>
+             <li><a href="consum_cat.html">Consum</a></li>
             </ul>
          </li>
-         <li><a href="restaurantescat.html">Restaurants</a></li>
-         <li><a href="mapacat.html">Rutes</a></li>
-         <li><a href="nosotroscat.html">Nosaltres</a></li>
-         <li><a href="rutasbarnajap.html">Home</a></li>
+         <li><a href="restaurantes_cat.html">Restaurants</a></li>
+         <li><a href="mapa_cat.html">Rutes</a></li>
+         <li><a href="nosotros_cat.html">Nosaltres</a></li>
+         <li><a href="index.html">Home</a></li>
     </ul>
   </ul>
 
