--- a/web bien/nosotros.html
+++ b/web bien/nosotros.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="nosotrosmov.css" type="text/css">
+  <link rel="stylesheet" href="nosotros_mov.css" type="text/css">
   <link rel="stylesheet" href="nosotros.css" type="text/css">
 
   <title>Sobre nosotros</title>
