--- a/web bien/ropayaccesorios_cat.html
+++ b/web bien/ropayaccesorios_cat.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="stylesheet" href="ropa y accesoriosmov.css" type="text/css">
-  <link rel="stylesheet" href="ropa y accesorios.css" type="text/css">
+<link rel="stylesheet" href="ropayaccesorios_mov.css" type="text/css">
+  <link rel="stylesheet" href="ropayaccesorios.css" type="text/css">
 
 
   <title>Roba i accesoris</title>
 </head>
 <body>
   <div id="arriba">
-      <div><a href="rutasbarnajap.html" style="color:black"><img src="foto/logo.png" id="logo"></a></div>
+      <div><a href="index.html" style="color:black"><img src="foto/logo.png" id="logo"></a></div>
       <div id="idioma">
         <div class="ca"><a href="nosotros.html" style="color:black">Castellano</a></div>
-        <div class="ca"><a href="nosotroscat.html" style="color:black">Català</a></div>
+        <div class="ca"><a href="nosotros_cat.html" style="color:black">Català</a></div>
       </div>
   </div>
   <div id="medio">
@@ -27,12 +27,12 @@
       <div id="blog">
         <div id="secciones">
           <ul class="secc">Botigues
-            <li class="tiendas"><a href="ropa y accesorioscat.html" style="color:black">Robes i accesoris</a></li>
-            <li class="tiendas"><a href="consumcat.html" style="color:black">Consum</a></li>
+            <li class="tiendas"><a href="ropayaccesorios_cat.html" style="color:black">Robes i accesoris</a></li>
+            <li class="tiendas"><a href="consum_cat.html" style="color:black">Consum</a></li>
           </ul>
-          <div class="secc"><a href="restaurantescat.html" style="color:black">Restaurants</a></div>
-          <div class="secc"><a href="mapacat.html" style="color:black">Rutes</a></div>
-          <div class="secc"><a href="nosotroscat.html" style="color:black">Nosaltres</a></div>
+          <div class="secc"><a href="restaurantes_cat.html" style="color:black">Restaurants</a></div>
+          <div class="secc"><a href="mapa_cat.html" style="color:black">Rutes</a></div>
+          <div class="secc"><a href="nosotros_cat.html" style="color:black">Nosaltres</a></div>
         </div>
 
         <ul id="menu">
@@ -40,14 +40,14 @@
      <ul class="interior">
          <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Botigues</label>
            <ul class="interior">
-             <li><a href="ropa y accesorioscat.html">Robes i accesoris</a></li>
-             <li><a href="consumcat.html">Consum</a></li>
+             <li><a href="ropayaccesorios_cat.html">Robes i accesoris</a></li>
+             <li><a href="consum_cat.html">Consum</a></li>
             </ul>
          </li>
-         <li><a href="restaurantescat.html">Restaurants</a></li>
-         <li><a href="mapacat.html">Rutes</a></li>
-         <li><a href="nosotroscat.html">Nosaltres</a></li>
-         <li><a href="rutasbarnajap.html">Home</a></li>
+         <li><a href="restaurantes_cat.html">Restaurants</a></li>
+         <li><a href="mapa_cat.html">Rutes</a></li>
+         <li><a href="nosotros_cat.html">Nosaltres</a></li>
+         <li><a href="index.html">Home</a></li>
     </ul>
   </ul>
 
@@ -76,7 +76,7 @@
           <div> <img src="foto/nunoya3.jpg"  class="pequeña"></div>
             <p id="text1">Pensem que Nunoya és una botiga ben il·luminada i de mida mitjana, les seves teles estampades són de gran qualitat i de cotó 100%. Aquesta botiga té un tracte fantàstic amb la gent, sens dubte la recomanem si necessites teles de qualsevol mena.
 </p>
-            <p id="text3">Teléfon: 933 17 53 88</p>
+            <p id="text3">Telefon: 933 17 53 88</p>
         </div>
           <div id="norma"><h2>Norma comics</h2>
             <div> <img src="foto/norma3.jpg"  class="grande"></div>
@@ -101,7 +101,7 @@
             <div> <img src="foto/otonashi4.jpg"  class="pequeña"></div>
             <div> <img src="foto/otonashi5.jpg"  class="pequeña"></div>
             <p id="text1">Tot i que Otamashi és una botiga petita, compta amb una gran varietat de productes Japonesos, la majoria dels productes són falsos però de bona qualitat i bastants barats.</p>
-            <p id="text3">Teléfono: 930 07 64 10</p>
+            <p id="text3">Telefon: 930 07 64 10</p>
           </div>
           <div id="haiku"><h2>Haiku</h2>
             <div> <img src="foto/haiku1.jpg"  class="grande"></div>
@@ -113,7 +113,7 @@
             <div> <img src="foto/haiku5.jpg"  class="pequeña"></div>
             <p id="text1">La nostra opinió sobre aquesta botiga és que així i tot de ser una botiga petita i plena de contingut, l'atenció al públic canvia segons la persona que vagi a comprar. Però d'altra banda et recomanem aquesta botiga per a la gent que vulgui sentir-se en japó. Els preus són competitius, però val la pena per la bona qualitat que tenen.
  </p>
-            <p id="text3">Teléfono: 932 17 96 23</p>
+            <p id="text3">Telefon: 932 17 96 23</p>
           </div>
           <div id="haiku"><h2>Momo store</h2>
             <div> <img src="foto/momo1.jpg"  class="grande"></div>
@@ -125,7 +125,7 @@
             <div> <img src="foto/momo5.jpg"  class="pequeña"></div>
             <p id="text1">La nostra opinió sobre Momo és que el tracte amb el públic és agradable i encantador, té bons preus i els seus productes són de gran qualitat, a més que si no trobes alguna cosa sobre el producte que desitgis comprar el pots reservar.
 </p>
-            <p id="text3">Teléfono: 932 17 96 23</p>
+            <p id="text3">Telefon: 932 17 96 23</p>
           </div>
           <div id="haiku"><h2>Eikyo</h2>
             <div> <img src="foto/eikyo1.jpg"  class="grande"></div>
@@ -138,7 +138,7 @@
             <div> <img src="foto/eikyo5.jpg"  class="pequeña"></div>
             <p id="text1">Eikyo, és una botiga petita i acollidora, els seus amos són d'allò més simpàtics i el tracte amb la gent és educat i encantador, es nota que tenen una gran passió sobre la cultura Japonesa i sempre et recomanen els millors productes sobre el Japó.
  </p>
-            <p id="text3">Teléfono: 932 17 96 23</p>
+            <p id="text3">Telefon: 932 17 96 23</p>
           </div>
       </div>
   </div>
